<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WalkMark</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">Walks</string>
    <string name="nav_account">Account</string>
    <string name="home_title">Start Walking</string>
    <string name="home_start_button">Start Walk</string>
    <string name="home_pause_button">Pause</string>
    <string name="home_resume_button">Resume</string>
    <string name="home_finish_button">Finish</string>
    <string name="home_discard_button">Discard</string>
...
